structure: added title

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- my style sheet-->
     <link rel="stylesheet" href="assets/css/styles.css">
     <!-- Title-->
-    <title>Document</title>
+    <title>Love Maths!</title>
 </head>
 
 <body>
